[package]
name = "combined2fst"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "combined2fst"
path = "src/main.rs"

[[bin]]
name = "fst"
path = "src/fst.rs"

[[bin]]
name = "test_integrity"
path = "src/test_integrity.rs"

[[bin]]
name = "build_vi_fst"
path = "src/build_vi_fst.rs"

[[bin]]
name = "test_vi_fst"
path = "src/test_vi_fst.rs"

[[bin]]
name = "build_bigram"
path = "src/build_bigram.rs"

[[bin]]
name = "read_bigram"
path = "src/read_bigram.rs"

[[bin]]
name = "build_bigram_stream"
path = "src/build_bigram_stream.rs"

[[bin]]
name = "validate_bigram"
path = "src/validate_bigram.rs"

[[bin]]
name = "suggest"
path = "src/suggest.rs"

[[bin]]
name = "build_vi_bigram"
path = "src/build_vi_bigram.rs"

[[bin]]
name = "suggest_vi"
path = "src/suggest_vi.rs"

[[bin]]
name = "validate_vi_bigram"
path = "src/validate_vi_bigram.rs"

[[bin]]
name = "build_vi_trigram"
path = "src/build_vi_trigram.rs"

[[bin]]
name = "build_trigram"
path = "src/build_trigram.rs"

[[bin]]
name = "suggest_hybrid"
path = "src/suggest_hybrid.rs"

[[bin]]
name = "batch_test_trigram"
path = "src/batch_test_trigram.rs"

[[bin]]
name = "test_user_history"
path = "src/test_user_history.rs"

[[bin]]
name = "benchmark_engine"
path = "src/benchmark_engine.rs"

[dependencies]
anyhow = "1"
flate2 = "1"
fst = "0.4"
memmap2 = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1.25"
